--- a/style.css
+++ b/style.css
@@ -233,3 +233,8 @@
   .sg-modal-body { grid-template-columns: 1fr; }
   .sg-left { border-right: none; border-bottom: 1px solid rgba(255,255,255,0.08); }
 }
+
+
+/* click to collapse */
+.sg-inline-head{ cursor: pointer; user-select: none; }
+.sg-inline-box.sg-collapsed .sg-inline-body{ display: none; }
