--- a/style.css
+++ b/style.css
@@ -523,3 +523,8 @@
   overflow: hidden !important;
   text-overflow: ellipsis !important;
 }
+
+
+
+/* v0.6.2 hide topbar book button */
+#sg_topbar_btn{ display: none !important; }
